clap_derive/tests/ui/subcommand_and_flatten.stderr
error: subcommand, flatten and skip cannot be used together
  --> $DIR/subcommand_and_flatten.rs:16:24
   |
16 |     #[clap(subcommand, flatten)]
   |                        ^^^^^^^
